--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,8 @@
     /* Create a Parallax Effect */
     .bgimg-1,
     .bgimg-2,
-    .bgimg-3 {
+    .bgimg-3,
+    .about-bgimg {
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
@@ -54,6 +55,12 @@
     .bgimg-3 {
         background-image: url("images/backgrounds/wood\ grains\ white.jpg");
         min-height: 400px;
+    }
+
+    .about-bgimg {
+        background-image: url("images/backgrounds/hand\ holding\ lavendar.jpg");
+        min-height: 100%;
+        max-height: 400px;
     }
 
     .w3-wide {
@@ -88,7 +95,8 @@
 
         .bgimg-1,
         .bgimg-2,
-        .bgimg-3 {
+        .bgimg-3,
+        .about-bgimg {
             background-attachment: scroll;
             min-height: 400px;
         }
