--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,10 @@
     .button-hover-shadow:hover {
         box-shadow: 0 12px 16px 0 black;
     }
+    
+    #page-region > div > div > div {
+        display: none!important;
+    }
 
     /* theme colors */
     /* 
