--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,8 @@
     #6200b3 purple
     #00487c dark blue 
     #f5f1e0 eggshell
-    #f0fff1 light green */
+    #f0fff1 light green 
+    4d4d4d footer background*/
 
     /* latin */
     @font-face {
